Refactoring image upload flow
