# api/openapi.v1.yaml
@@ -38,7 +38,7 @@ paths:
               $ref: "#/components/schemas/LoginRequest"
       responses:
         '200':
-          description: Success
+          description: OK
           content:
             application/json:
               schema:
@@ -62,7 +62,7 @@ paths:
               $ref: '#/components/schemas/SignupRequest'
       responses:
         '201':
-          description: Success
+          description: OK
           content:
             application/json:
               schema:
@@ -81,7 +81,7 @@ paths:
         - User
       responses:
         '200':
-          description: Success
+          description: OK
           content:
             application/json:
               schema:
@@ -100,7 +100,7 @@ paths:
         - Address
       responses:
         '200':
-          description: Success
+          description: OK
           content:
             application/json:
               schema:
@@ -122,7 +122,7 @@ paths:
               $ref: '#/components/schemas/CreateAddressRequest'
       responses:
         '201':
-          description: Success
+          description: OK
           content:
             application/json:
               schema:
@@ -143,7 +143,7 @@ paths:
         - Cart
       responses:
         '201':
-          description: successful operation
+          description: OK
           content:
             application/json:
               schema:
@@ -161,7 +161,7 @@ paths:
               $ref: '#/components/schemas/CartProduct'
       responses:
         '201':
-          description: successful operation
+          description: OK
           content:
             application/json:
               schema:
@@ -179,7 +179,7 @@ paths:
               $ref: '#/components/schemas/CartProduct'
       responses:
         '200':
-          description: successful operation
+          description: OK
           content:
             application/json:
               schema:
@@ -192,7 +192,7 @@ paths:
         - Cart
       responses:
         '200':
-          description: successful operation
+          description: OK
           content:
             application/json:
               schema:
@@ -207,7 +207,7 @@ paths:
         - Order
       responses:
         '200':
-          description: successful operation
+          description: OK
           content:
             application/json:
               schema:
@@ -220,7 +220,7 @@ paths:
         - Order
       responses:
         '201':
-          description: successful operation
+          description: OK
           content:
             application/json:
               schema:
@@ -235,7 +235,7 @@ paths:
         - Order
       responses:
         '201':
-          description: successful operation
+          description: OK
           content:
             application/json:
               schema:
@@ -258,7 +258,7 @@ paths:
         - Category
       responses:
         '200':
-          description: successful operation
+          description: OK
           content:
             application/json:
               schema:
@@ -274,7 +274,7 @@ paths:
               $ref: '#/components/schemas/CreateCategoryRequest'
       responses:
         '201':
-          description: successful operation
+          description: OK
           content:
             application/json:
               schema:
@@ -292,7 +292,7 @@ paths:
               $ref: '#/components/schemas/Category'
       responses:
         '200':
-          description: successful operation
+          description: OK
           content:
             application/json:
               schema:
@@ -307,7 +307,7 @@ paths:
         - Category
       responses:
         '200':
-          description: successful operation
+          description: OK
       security:
         - BearerAuth: []
     parameters:
@@ -326,7 +326,7 @@ paths:
         - Product
       responses:
         '200':
-          description: successful operation
+          description: OK
           content:
             application/json:
               schema:
@@ -342,7 +342,7 @@ paths:
               $ref: '#/components/schemas/CreateProductRequest'
       responses:
         '201':
-          description: successful operation
+          description: OK
           content:
             application/json:
               schema:
@@ -357,7 +357,7 @@ paths:
         - Product
       responses:
         '200':
-          description: successful operation
+          description: OK
           content:
             application/json:
               schema:
@@ -373,7 +373,7 @@ paths:
               $ref: '#/components/schemas/UpdateProductRequest'
       responses:
         '200':
-          description: successful operation
+          description: OK
           content:
             application/json:
               schema:
@@ -386,11 +386,11 @@ paths:
         name: productId
         in: path
         required: true
-        description: ID заказа
+        description: ID товара
 
-  /image/upload:
+  /product/{productId}/image:
     post:
-      summary: Загрузка изображений
+      summary: Загрузка изображений товара
       tags:
         - Image
       requestBody:
@@ -403,13 +403,20 @@ paths:
                 contentType: image/png, image/jpeg
       responses:
         '201':
-          description: successful operation
+          description: OK
           content:
             application/json:
               schema:
                 $ref: '#/components/schemas/ImageList'
       security:
         - BearerAuth: []
+    parameters:
+      - schema:
+          type: string
+        name: productId
+        in: path
+        required: true
+        description: ID товара
 
 components:
   securitySchemes:
@@ -731,7 +738,7 @@ components:
           type: integer
 
     CreateCategoryRequest:
-      title: Тело запроса для создания категории
+      title: Тело запроса на создания категории
       type: object
       required:
         - name
@@ -763,8 +770,19 @@ components:
           format: int64
 
     UpdateProductRequest:
-      title:  Запрос для изменения полей товара
+      title:  Запрос на изменения полей товара
       type: object
+      properties:
+        name:
+          type: string
+        description:
+          type: string
+        amount:
+          type: integer
+          format: int64
+        price:
+          type: integer
+          format: int64
 
     Image:
       title: Изображение
